[tool.poetry]
name = "stealthybot"
version = "0.1.0"
description = "a cute simple discord bot"
authors = ["realstealthninja <realstealthninja@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
disnake = "^2.9.0"
twitchio = "^2.8.1"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
Pillow = "^10.0.1"
asyncio = "^3.4.3"
aiosqlite = "^0.19.0"
matplotlib = "^3.8.0"
apexlegendspy = "^0.0.2"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
